--- a/MavenProject1/.settings/org.eclipse.m2e.core.prefs
+++ b/MavenProject1/.settings/org.eclipse.m2e.core.prefs
@@ -1,4 +1,4 @@
-activeProfiles=C\:\\Users\\Sanjay\\.m2
+activeProfiles=C\:\\Users\\Sanjay\\.m2\\settings.xml
 eclipse.preferences.version=1
 resolveWorkspaceProjects=true
 version=1
